# minecraft-voxelgen

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  DECISIONS.md  README.md  pyproject.toml
configs/: block2vec_config.yaml  generation_config.yaml  training_config.yaml  vqvae_config.yaml
data/colab/: sparse_transformer_v1_colab.ipynb  vqvae_embedding_validation_colab.ipynb  vqvae_training_v10_volume_head.ipynb  vqvae_training_v11_asymmetric.ipynb  vqvae_training_v12_balanced.ipynb  vqvae_training_v13a_gumbel.ipynb  vqvae_training_v13b_ste.ipynb  vqvae_training_v14_rebalanced.ipynb  vqvae_training_v4_colab.ipynb  vqvae_training_v5.1_fsq.ipynb  vqvae_training_v5_fsq.ipynb  vqvae_training_v6_rfsq.ipynb  vqvae_training_v6_rfsq_with_frequency.ipynb  vqvae_training_v7_unet.ipynb  vqvae_training_v8b_latent16.ipynb  vqvae_training_v9_twophase.ipynb  vqvae_v8b_BALANCED.ipynb  vqvae_v8b_DIFFERENTIABLE_FIX.ipynb  vqvae_v8b_DIRECT_LOGIT.ipynb  vqvae_v8b_TEMPERATURE.ipynb  vqvae_v8b_standalone.ipynb  vqvae_v8b_standalone_FIXED_v2.ipynb
data/kaggle/: block2vec_training.ipynb
data/kaggle/notebooks/: block2vec_training_v2.ipynb  block2vec_v3_compositional.ipynb  block2vec_v4_compositional.ipynb  vqvae_embedding_validation.ipynb  vqvae_embedding_validation_v2.ipynb  vqvae_embedding_validation_v3.ipynb  vqvae_training.ipynb  vqvae_training_v2.ipynb  vqvae_training_v4.ipynb  vqvae_v3_validation.ipynb
docs/: minecraft_ai_generation.md
scripts/: analyze_structure_quality.py  build_tag_index.py  check_decomposition.py  check_h5_format.py  check_notebook.py  clip_filter_and_label.py  collapse_block_states.py  collect_layernorm_stats.py  convert_all_to_h5.py  convert_schematics_to_h5.py  create_v3_validation.py  debug_embeddings.py  evaluate_block2vec.py  examine_schematic.py  export_latent_test_schematics.py  export_v6b_structures.py  extract_blocks.py  extract_wiki_blocks.py  fix_v3_notebook.py  generate_captions.py  generate_negative_samples.py  generate_procedural_houses.py  generate_structures.py  generate_v4_structures.py  latent_explorer.py  latent_explorer_v2.py  latent_explorer_v3_prequant.py  list_structures.py  place_reconstruction.py  place_structure.py  precompute_caption_embeddings.py  precompute_clip_embeddings.py  precompute_latents.py  prepare_data.py  reconstruct_schematic.py  render_all_structures.py  tag_analysis.py  test_latent_capacity.py  test_v16b_reconstruction.py  train_block2vec.py  (+14 more)
src/: __init__.py
src/data/: __init__.py  block2vec_dataset.py  block2vec_dataset_v2.py  block_colors.py  block_decomposition.py  conditioned_dataset.py  evaluation_metrics.py  schematic_parser.py  sparse_dataset.py  terrain_detection.py  vocabulary.py  voxel_renderer.py  vqvae_dataset.py
src/export/: __init__.py  legacy_schematic_exporter.py  nbt_exporter.py  schematic_exporter.py
src/generation/: __init__.py
src/models/: __init__.py  block2vec.py  block2vec_v2.py  block2vec_v3.py  clip_scorer.py  discrete_diffusion.py  discriminator.py  fsq.py  losses.py  rfsq.py  rfsq_backup.py  sparse_transformer.py  structural_losses.py  vqvae.py
src/training/: __init__.py
src/utils/: __init__.py
tests/: __init__.py  test_vocabulary.py
